# conflicting

./: Cargo.toml
conflicting/: Cargo.toml
conflicting/src/: input.rs  lib.rs
examples/basic_conflicting_example/: Cargo.toml
examples/basic_conflicting_example/src/: main.rs
tests/: dummy.rs
