[package]
name = "conflicting"
version = { workspace = true }
edition = { workspace = true }
license = "MIT"
description = "A library to generate compile time errors for mutually exclusive feature flags."
repository = "https://github.com/nhtyy/conflicting"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full", "extra-traits"] }
